Bug 150808 - General error importing svgz file
Summary: General error importing svgz file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-09-05 20:01 UTC by Xisco Faulí
Modified: 2022-09-08 15:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-09-05 20:01:25 UTC
Steps to reproduce:
1. Open attachment 161454 [details] from bug 133549

->  General error. General input/output error.

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: ee003ca99f94c9a5517ebba67ed02abb2a60dae8
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-09-05 20:02:21 UTC
Regression introduced by:

author	offtkp <parisoplop@gmail.com>	2022-07-30 01:47:54 +0300
committer	Tomaž Vajngerl <quikee@gmail.com>	2022-08-10 07:45:01 +0200
commit 5e636747faf919e36bfd015c6dfcf0aea0c41938 (patch)
tree 6be74f499a8836c8103327a20213c1b7207c70cc
parent 4e2ce2a460458f17ee4360c45a2da2fc4b4d753e (diff)
Prepare GraphicDescriptor and GraphicFormatDetector for merging

Bisected with: bibisect-linux64-7.5

Adding Cc: to offtkp
Comment 2 Julien Nabet 2022-09-06 19:36:53 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I gave a try with:
https://gerrit.libreoffice.org/c/core/+/139537
Comment 3 Commit Notification 2022-09-07 16:06:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e485d917058ff3c5ebf348c1e0ec28f0fa9b1b93

tdf#150808: General error importing svgz file

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-09-08 15:36:42 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/845fa950ac635ea57dd860fb96fadcfb75e97f2b

tdf#150808: vcl_graphic_test: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.