tdf#150808: General error importing svgz file

Change-Id: I7f2a8c6ffe4eba0c9e75913bd3e4671b0727fd94
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139537
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>